k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plataforma-incendios
  labels:
    app.kubernetes.io/part-of: plataforma-incendios
