k8s/07-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-storage
  namespace: plataforma-incendios
  labels:
    app: minio
spec:
  type: NodePort
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      nodePort: 30090
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30091
  selector:
    app: minio
